# studierzimmer

./: .gitignore  Attribution.md  Makefile  README.md  attribution.json  funktionen.ink  package-lock.json  package.json  server.py  studierzimmer.ink  system.ink  tsconfig.json  webpack.config.js
.github/workflows/: publish.yml
audio/Bienen/: Bienen.bwproject
audio/Bienen/bounce/: 73370__Bienen.flac  Instrument Layer-bounce-2.flac
audio/Raum/: Raum.bwproject
audio/Raum/bounce/: 108784__Close Master-bounce-1.flac  324937__Tea.flac  416478__low-swoosh.flac  458372__Tasche.flac  661997__Open-Close.flac  717147__Globus-Short.flac  717147__Globus.flac  733927__Chess.flac
audio/Raum/samples/: 108784__timkahn__cupboard-door-click.flac  324937__mrauralization__pouring-tea.flac  416478__soundflakes__low_swoosh-7.flac  428748__pauliperez1999__taking-a-paper-2.flac  458372__detamine__bag_04.flac  661997__giddster__door-opening-and-closing-basement-outer-door.flac  717147__staticdistance__short-sand-beach-waves-4.flac  733927__jjtaynos__chess-pieces-move-close.flac
audio/Schrank/: Schrank.bwproject
audio/Schrank/bounce/: 367423__108784__Open Master-bounce-1.flac
audio/Schrank/samples/: 367423__magedu__door_lock_open.flac
src/: activity.ts  frontend.ink  frontend_func.ink  index.html  main.js  main.ts  sound.ts  style.css  util.ts
src/attribution/: attribution.py  pyproject.toml
static/: attribution.html  index.html  style.css
templates/: README.md  attribution.html
