[project]
name = "attribution"
version = "0.1.0"
description = "Fetches attribtion from freesound.org"
authors = [
    {name = "Jean-Louis Fuchs",email = "safe.pen2857@rhizoome.ch"}
]
license = {text = "MIT and APACHE"}
readme = "README.md"
requires-python = ">3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "platformdirs (>=4.3.6,<5.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)"
]

[project.scripts]
attribution_cli = 'attribution:cli'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
mypy = "^1.14.1"
pdbpp = "^0.10.3"
ruff = "^0.9.1"


[tool.poetry.group.lsp.dependencies]
python-lsp-server = "^1.12.0"
python-lsp-ruff = "^2.2.2"

